python_sources = [
    '__init__.py',
    'test_alphabet.py',
    'test_bitfield.py',
    'test_block.py',
    'test_gencode.py',
    'test_keyhash.py',
    'test_matrix.py',
    'test_msa.py',
    'test_msafile.py',
    'test_randomness.py',
    'test_sequence.py',
    'test_sequencefile.py',
    'test_ssi.py',
    'test_vector.py',
]

python.install_sources(
    python_sources, 
    subdir : 'pyhmmer' / 'tests' / 'test_easel',
)