python_sources = [
    '__init__.py',
    'test_alignment.py',
    'test_background.py',
    'test_block.py',
    'test_builder.py',
    'test_hit.py',
    'test_hmm.py',
    'test_hmmfile.py',
    'test_optimizedprofile.py',
    'test_pipeline.py',
    'test_profile.py',
    'test_tophits.py',
    'test_tracealigner.py',
    'test_traces.py',
]

python.install_sources(
    python_sources, 
    subdir : 'pyhmmer' / 'tests' / 'test_plan7',
)