sources = [
    '1390.SAMEA104415756.OFHT01000022.fna',
    '1390.SAMEA104415756.OFHT01000024.fna',
    '938293.PRJEB85.HG003687.faa',
    'BGC0001090.gbk',
    'bmyD.fna',
    'CP040672.1.genes_100.fna',
    'LuxC.faa',
    'PKSI.faa',
]

python.install_sources(
    sources,
    subdir : 'pyhmmer' / 'tests' / 'data' / 'seqs'
)