sources = [
    'PF02826.hmm',
    'PF02826.hmm.h3f',
    'PF02826.hmm.h3i',
    'PF02826.hmm.h3m',
    'PF02826.hmm.h3p',
    'PKSI-AT.hmm',
    'PKSI-AT.hmm.h3f',
    'PKSI-AT.hmm.h3i',
    'PKSI-AT.hmm.h3m',
    'PKSI-AT.hmm.h3p',
    'RREFam.hmm',
    'RREFam.hmm.h3f',
    'RREFam.hmm.h3i',
    'RREFam.hmm.h3m',
    'RREFam.hmm.h3p',
    'Thioesterase.hmm',
    'Thioesterase.hmm.h3f',
    'Thioesterase.hmm.h3i',
    'Thioesterase.hmm.h3m',
    'Thioesterase.hmm.h3p',
]

python.install_sources(
    sources,
    subdir : 'pyhmmer' / 'tests' / 'data' / 'hmms' / 'db'
)